--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Content Writing</title>
+    <title>STUDY & RELOCATE TO CANADA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -105,7 +105,7 @@
         <div class="finalSection">
             <h1>BECOME A PARTNER</h1>
             <P>
-                Secure a place in the space of those in the content writing world to start making money
+                Secure a place in the space of those in Canada and in different part of the world.
             </P>
             <a href="https://wa.link/vie4at" target="_blank"> <button>Get Access</button></a>
             <div>
